Update vulnerable NPM packages

--- a/src/public/mix-manifest.json
+++ b/src/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/assets/scripts/volumes.js": "/assets/scripts/volumes.js?id=8e96aa72a21070aa40b4",
-    "/assets/styles/volumes.css": "/assets/styles/volumes.css?id=a0571393db7d1a49c270"
+    "/assets/scripts/volumes.js": "/assets/scripts/volumes.js?id=75083a7fc4355092ae18627d041ffefa",
+    "/assets/styles/volumes.css": "/assets/styles/volumes.css?id=a0571393db7d1a49c270f0195628fec7"
 }
